84th Commit:
Finished with changing the implementation and bug fixes. Working on
new part of app, the ListView... or getting back to it...